kubernetes/scripts/wordpress-with-mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  type: LoadBalancer
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: wordpress
  name: wordpress
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: wordpress
  template: 
    metadata: 
      labels: 
        app: wordpress
    spec: 
      containers: 
        - 
          image: "158804261583.dkr.ecr.ap-southeast-1.amazonaws.com/test-app:wordpress-int.1"
          name: wordpress
          ports: 
            - 
              containerPort: 8080
              
        -              
          image: "158804261583.dkr.ecr.ap-southeast-1.amazonaws.com/test-app:mysql-with-db-int.1"
          name: mysql
          ports: 
            - 
              containerPort: 3306
