kubernetes/scripts/wordpress.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  type: NodePort
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: wordpress
  name: wordpress
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: wordpress
  template: 
    metadata: 
      labels: 
        app: wordpress
    spec: 
      containers: 
        - 
          image: "523681885266.dkr.ecr.ap-southeast-1.amazonaws.com/test-app:wordpress-int.1"
          name: wordpress
          ports: 
            - 
              containerPort: 80
          volumeMounts:
            - name: wordpress-ebs
              mountPath: "/var/www/html/wp-content/uploads"
              
      volumes:
        - name: wordpress-ebs
          persistentVolumeClaim:
            claimName: wordpress-ebs-pvc
