kubernetes/scripts/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:523681885266:certificate/32d75034-e662-445a-9c42-9d04d35aa85c
    alb.ingress.kubernetes.io/healthcheck-path: /test-app
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/success-codes: 200,302
    alb.ingress.kubernetes.io/target-type: instance
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/certificate-arn":"arn:aws:acm:ap-southeast-1:523681885266:certificate/32d75034-e662-445a-9c42-9d04d35aa85c","alb.ingress.kubernetes.io/healthcheck-path":"/test-app","alb.ingress.kubernetes.io/listen-ports":"[{\"HTTP\": 80}, {\"HTTPS\":443}]","alb.ingress.kubernetes.io/scheme":"internet-facing","alb.ingress.kubernetes.io/success-codes":"200,302","alb.ingress.kubernetes.io/target-type":" [...]
    kubernetes.io/ingress.class: alb
  generation: 2
  labels:
    app: test-app-apis-ingress
  name: test-app-apis-ingress
  namespace: test-app
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: hubspot-int
          servicePort: 80
        path: /test-app/test/v1/questions
      - backend:
          serviceName: hubspot-int
          servicePort: 80
        path: /test-app/test/v1/hubspot/quotation        
      - backend:
          serviceName: hubspot-int
          servicePort: 80
        path: /test-app/test/v1/hubspot/questions
      - backend:
          serviceName: quote-int
          servicePort: 80
        path: /test-app/test/v1/quotes
      - backend:
          serviceName: pandadoc
          servicePort: 80
        path: /test-app/v1/proposal
      - backend:
          serviceName: pandadoc
          servicePort: 80
        path: /test-app/v1/contract/status
      - backend:
          serviceName: countries
          servicePort: 80
        path: /test-app/v1/countries
      - backend:
          serviceName: questions
          servicePort: 80
        path: /test-app/v1/questions
      - backend:
          serviceName: hubspot
          servicePort: 80
        path: /test-app/v1/hubspot
      - backend:
          serviceName: quote
          servicePort: 80
        path: /test-app/v1/quotes
      - backend:
          serviceName: sendgrid-stripe
          servicePort: 80
        path: /test-app/v1/sendOTP
      - backend:
          serviceName: sendgrid-stripe
          servicePort: 80
        path: /test-app/v1/verifyOTP
      - backend:
          serviceName: sendgrid-stripe
          servicePort: 80
        path: /test-app/v1/createStripePIToken
      - backend:
          serviceName: sendgrid-stripe
          servicePort: 80
        path: /test-app/v1/addStripePaymentResult
      - backend:
          serviceName: hubspot
          servicePort: 80
        path: /test-app/v1/hubspot/industries
      - backend:
          serviceName: hubspot
          servicePort: 80
        path: /test-app/v1/hubspot/contact/basicinfo
      - backend:
          serviceName: hubspot
          servicePort: 80
        path: /test-app/v1/hubspot/contact/directorsandofficers/questions
      - backend:
          serviceName: hubspot
          servicePort: 80
        path: /test-app/v1/hubspot/contact/directorsandofficers/quotation
      - backend:
          serviceName: hubspot
          servicePort: 80
        path: /test-app/v1/hubspot/contact/companyinfo
      - backend:
          serviceName: hubspot
          servicePort: 80
        path: /test-app/v1/hubspot/contact
      - backend:
          serviceName: hubspot-int
          servicePort: 80
        path: /test-app/test/v1/hubspot/termsandconditions
        
status:
  loadBalancer:
    ingress:
    - hostname: 6b043526-test-app-test-appapis-93de-351869415.ap-southeast-1.elb.amazonaws.com
